# SecretApp

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: src.sh
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2025_04_07_2352-8d8c7b8268b5_.py  2025_04_07_2356-ca757f479e98_.py  2025_04_08_0001-0c24541dd085_.py  2025_04_08_0102-63ae3b159cc1_.py  2025_04_08_0106-e6f7764cbe56_.py  2025_04_08_0107-1de8ba2842a6_.py  2025_04_08_0846-841beab15a83_.py
src/api/v1/: __init__.py  protocol.py  secret_api.py
src/core/: config.py  container.py  database.py  exceptions.py  redis.py  security.py  uow.py
src/secret_app/application/: container.py  dto.py  exceptions.py
src/secret_app/application/usecases/: create_secret_usecase.py  delete_secret_usecase.py  get_secret_usecase.py  read_secret_usecase.py
src/secret_app/domain/: secret.py  secret_log.py
src/secret_app/infrastructure/: container.py  models.py
src/secret_app/infrastructure/repository/: secret_logs_repository.py  secret_repository.py
src/secret_app/presentation/: container.py
src/secret_app/presentation/controllers/: create_secret_controller.py  delete_secret_controller.py  get_secret_controller.py
src/secret_app/presentation/schemas/: requests.py  responses.py
