[project]
name = "secret-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "cryptography>=44.0.2",
    "dependency-injector>=4.46.0",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "mypy>=1.15.0",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "ruff>=0.11.4",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 100  
target-version = "py311"
exclude = [
    "src/alembic/",
]

[tool.ruff.lint]
select = ["ALL"]  
ignore = [
    "E501", "D", "UP035", "ANN401",
    "B010", "B009", "SIM117", "EM101",
    "TRY003", "FAST002", "B008", "TID252",
    "PGH003", "INP001"
]  

[tool.mypy]
files = "src/"
ignore_missing_imports = true
exclude = [
    "alembic/.*",
]

[tool.pylint]
disable = ["C0115", "C0114", "C0116", "E0401"]
exclude = "alembic/.*"
